--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,25 @@
 
+body{
+  text-align: center;
+  background-color: antiquewhite;
+}
+.table{
+  display: inline;
+  margin: auto;
+}
+
 .board td {
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    transition: 0.5s;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  transition: 0.5s;
+  background-color: rgb(245, 170, 235);
 }
 
 .board td:hover {
-    background-color: lightsalmon;
+  background-color: lightsalmon;
 }
 
-/* .cell {
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  font-size: 1.5em;
-} */
-
-.emptyCell {
-background-color: aquamarine;
+.inShown {
+  background-color: aquamarine;
 }
-
-/* 
-function createMine(board) {
-  // board[getRandomMintLocaition(0, 3)][getRandomMintLocaition(0, 3)].isMine = true
-
-
-  var mine = {
-      location: {
-          i: getRandomMintLocaition(0, 3),
-          j: getRandomMintLocaition(0, 3)
-      }
-  };
-  board[mine.location.i][mine.location.j].isMine = true
-}
-
-
-function createMines(board) {
-  for (var i = 0; i < board.length; i++) {
-      createMine(gBoard);
-      console.log(board);   
-       } 
-} */
