--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,6 @@ body{
   text-align: center;
   background-color: antiquewhite;
 }
-.table{
-  display: inline;
-  margin: auto;
-}
 
 .board td {
   width: 30px;
@@ -19,7 +15,38 @@ body{
 .board td:hover {
   background-color: lightsalmon;
 }
-
-.inShown {
-  background-color: aquamarine;
+.smiley{
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size:2rem;
+  margin: 4px 2px;
+  transition-duration: 0.8s;
+  cursor: pointer;
 }
+
+.btn {
+  border: none;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 4px 2px;
+  transition-duration: 0.8s;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #555555;
+  color: white;
+}
+
+.smiley:hover {
+  background-color: #555555;
+  color: white;
+}
+
+
